2002-03-26  John Sullivan  <sullivan@apple.com>

	* WebKit.pbproj/project.pbxproj:
	Marked IFProgress.h Public.

2002-03-25  John Sullivan  <sullivan@apple.com>

	Broke IFLoadProgress out into its own file, and added
	an init method and getters, without which this class
	is useless in Objective-C files (but strangely usable
	in Objective-C++ files, see radar 2887253).

	* WebView.subproj/IFWebController.h:
	* WebView.subproj/IFBaseWebController.mm:
	Took IFLoadProgress declaration and implementation out of here.

	* WebView.subproj/IFLoadProgress.h,
	* WebView.subproj/IFLoadProgress.mm:
	Moved IFLoadProgress declaration and implementation to here;
	added -[IFLoadProgress initWithBytesSoFar:totalToLoad:type:]
	and getters for each field.

	* WebKit.pbproj/project.pbxproj: Updated for new files

2002-03-25  Richard Williamson  <rjw@apple.com>

        Tweaks to force layout of frames and iframes.
        
	* WebView.subproj/IFWebFramePrivate.mm: (-[IFWebFrame _isLoadComplete]):

2002-03-25  Maciej Stachowiak  <mjs@apple.com>

	* WebView.subproj/IFWebDataSourcePrivate.mm: (-[IFWebDataSource
	_startLoading:]): Just create an IFURLHandle, since it now creates
	the proper concrete subclass automagically.

2002-03-25  Chris Blumenberg  <cblu@apple.com>

	* MIME.subproj/IFMIMEDatabase.m: (+[IFMIMEDatabase sharedMIMEDatabase]),
	(-[IFMIMEDatabase MIMEHandlerForMIMEType:]), (setMimeHandlers):
	* MIME.subproj/IFMIMEHandler.h:
	* MIME.subproj/IFMIMEHandler.m: (-[IFMIMEHandler
	initWithMIMEType:handlerType:handlerName:]), (-[IFMIMEHandler MIMEType]),
	(-[IFMIMEHandler MIMESupertype]), (-[IFMIMEHandler MIMESubtype]),
	(-[IFMIMEHandler handlerName]), (-[IFMIMEHandler handlerType]), (-[IFMIMEHandler
	description]):

	Initial implementations of the above.

2002-03-25  Richard Williamson  <rjw@apple.com>

        Added private API to allow browser to access the DOM tree.

	* WebView.subproj/IFWebViewPrivate.mm: (-[IFWebView DOM::]), (+[IFWebView